Logging Audit trail exposes log request method